--- a/S06.01-Exercise-LaunchSettingsActivity/app/src/main/AndroidManifest.xml
+++ b/S06.01-Exercise-LaunchSettingsActivity/app/src/main/AndroidManifest.xml
@@ -37,7 +37,7 @@
         </activity>
         <activity
             android:name=".DetailActivity"
-            android:parentActivityName=".MainActivity">
+            android:parentActivityName=".MainActivity" android:launchMode="singleTop">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
